--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon --watch src src/server.js"
+    "start": "npm run build-server",
+    "build-server": "webpack --colors --progress"
   },
   "repository": {
     "type": "git",
@@ -18,11 +18,23 @@
   },
   "homepage": "https://github.com/imoralescs/node-express#readme",
   "devDependencies": {
-    "puppeteer": "^1.17.0"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-dotenv": "^0.1.1",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "puppeteer": "^1.17.0",
+    "raw-loader": "^0.5.1",
+    "source-map-support": "^0.5.6",
+    "start-server-webpack-plugin": "^2.2.5",
+    "webpack": "^4.16.3",
+    "webpack-cli": "^3.1.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "dotenv": "^8.0.0",
-    "express": "^4.16.3",
-    "nodemon": "^1.19.1"
+    "express": "^4.16.3"
   }
 }
